# audio-to-text

./: .env  .gitignore  Cargo.toml  Dockerfile
src/: errors.rs  lib.rs
src/endpoints/: hello.rs  helper.rs  mod.rs  recognizer.rs
src/healthcheck/: mod.rs  routes.rs
src/mws/: cors.rs  logger.rs
src/swagger/: mod.rs
src/transformer/: client.rs  mod.rs  resampler.rs
src/whisper/: client.rs  client_async.rs  config.rs  forms.rs  helper.rs  mod.rs  resampler.rs  routes.rs
src/ws/: actor.rs  mod.rs  routes.rs
static/: stream.html  upload.html
