[package]
name = "audio-to-text"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "^0.6"
actix-multipart = "^0.6"
actix-web = "^4.5"
actix-ws = "^0.2"
anyhow = "^1.0"
dotenv = "^0.15"
futures-util = "^0.3"
hound = "^3.5"
log = "^0.4"
pretty_env_logger = "^0.5"
serde_json = "^1.0"
thiserror = "^1.0"
tokio-tungstenite = "^0.21"
uuid = { version = "^1.8", features = ["v4"] }
whisper-rs = "^0.10"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.tokio]
version = "^1.37"
features = ["full"]
